2010-12-17  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSCalendar.m: Fix to build with ICU 4.0
	* configure.ac: Permit ICU version as old as 4.0
	* configure: regenerate

2010-12-16  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSCalendar.m: Added code for -maximumRangeOfUnit: and
	-minimumRangeofUnit:.

2010-12-16  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSRegularExpression.m: Move towards coding standards compliance
	* Source/GSICUString.m: ditto

2010-12-16  Richard Frith-Macdonald <rfm@gnu.org>

	* configure.ac: Remove redundant/incorrect define of HAVE_ICU.
	Require ICU version 4.6 or later.
	Add comments describing how external dependencies are handled.
	* configure: Regenerate
	* Headers/Additions/GNUstepBase/config.h.in: Regenerate
	* config.mak.in: Update for consistency
	* base.make.in: ditto
	* Headers/Additions/GNUstepBase/GSConfig.h.in: ditto
	* Source/GSHTTPURLHandle.m: Improve debug logging a little
	* Source/NSXMLParser.m: Improve error handling. Use sloppy parser.
	* Source/NSRegularExpression.m: Use GS_USE_ICU and nnever HAVE_ICU
	* Source/NSCalendar.m: ditto
	* Source/NSLocale.m: ditto
	* Source/GSICUString.m: ditto

2010-12-15  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/GNUmakefile: Install NSCalendar.h.
	* Headers/Foundation/NSCalendar.h:
	* Source/NSCalendar.m: Started adding code to NSCalendar.
	
2010-12-15  Stefan Bidigaray <stefanbidi@gmail.com>

	* configure: Regenerate.
	* Headers/Additions/GNUstepBase/config.h.in: Update for unicode/ucal.h.
	* Headers/Foundation/NSLocale.h: Added NSLocaleCalendarIdentifier key.
	* Source/NSLocale.m: Added handling of locale keywords and a few other
	minor changes.
	
2010-12-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Source/NSLocale.m: Added NSCalendar dependent code.
	
2010-12-14  Stefan Bidigaray <stefanbidi@gmail.com>

	* Headers/Foundation/Foundation.h:
	* Source/GNUmakefile: Include NSCalendar.
	* configure.ac: Check for unicode/ucal.h.